# senlin-dashboard

./: .eslintrc  .gitignore  .gitreview  .zuul.yaml  README.rst  _50_senlin.py.example  _59_toggle_angular_senlin_dashboard.py.example  lower-constraints.txt  manage.py  package.json  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: api.rst  develop.rst  hosts.rst  index.rst
doc/source/install/: index.rst
releasenotes/notes/: angularize-ac693bf52216fdf5.yaml  bug-1805740-0c6d52cb2fcef60c.yaml  bug-1817803-47469745618a4ac6.yaml  cluster-link-for-receiver-3146134204071eb5.yaml  cluster-resize-9cf0c0a8a469f4ed.yaml  deprecate-django-panels-2ed61f84d4c76c90.yaml  drop-py-2-7-f8879b776d5781a8.yaml  install-instruction-246a41feb20955ec.yaml  long-names-a03acbfbc159850d.yaml  node-detail-view-e605e24a6978be18.yaml  node-list-pagination-acf1f0d161f7097f.yaml  pike-306c0b6d50734588.yaml  queens-741042b861cd8c6e.yaml  receiver-update-5c69fb6e2c9c8bda.yaml  rocky-f7f77b7e64f38dc6.yaml  scale-cluster-21481c69dcf78cc8.yaml  train-1ff350ff580134a0.yaml
releasenotes/source/: conf.py  index.rst
senlin_dashboard/: exceptions.py  karma.conf.js
senlin_dashboard/api/: senlin.py  utils.py
senlin_dashboard/api/rest/: __init__.py  senlin.py
senlin_dashboard/cluster/: dashboard.py
senlin_dashboard/cluster/clusters/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
senlin_dashboard/cluster/ngreceivers/: panel.py  urls.py  views.py
senlin_dashboard/cluster/nodes/: event_tables.py  forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
senlin_dashboard/cluster/policies/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
senlin_dashboard/cluster/profiles/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
senlin_dashboard/cluster/receivers/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
senlin_dashboard/cluster/templatetags/: nbsp.py
senlin_dashboard/conf/: README.rst
senlin_dashboard/enabled/: _50_senlin.py
senlin_dashboard/locale/: django.pot  djangojs.pot
senlin_dashboard/test/: helpers.py  settings.py  urls.py
senlin_dashboard/test/api_tests/: senlin_rest_tests.py  senlin_tests.py  test_senlin.py  test_senlin_rest.py
senlin_dashboard/test/test_data/: exceptions.py  senlin_data.py  utils.py
tools/: install_venv.py
(+195 files in other folders)
