[metadata]
name = senlin-dashboard
summary = Senlin Dashboard
description-file = README.rst
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/senlin/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    senlin_dashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
