[metadata]
name = senlin-dashboard
summary = Senlin Dashboard
description_file = README.rst
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/senlin-dashboard/latest/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    senlin_dashboard

